--- a/0x02-react_props/task_0/dashboard/src/App/App.css
+++ b/0x02-react_props/task_0/dashboard/src/App/App.css
@@ -6,6 +6,26 @@
   font-size: 1.1rem;
 }
 
+.App-logo {
+  height: 35vmin;
+}
+
+.App-header {
+  position: relative;
+  width: 100%;
+  border-bottom: .3rem solid #e1003c;
+  align-items: center;
+  display: flex;
+  color: #e1003c;
+  margin-bottom: 3.5rem;
+}
+
+.App-header h1 {
+  font-size: 2.5rem;
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
 .App-body {
   margin: 0;
   padding: 0;
@@ -15,4 +35,27 @@
   width: 100%;
   max-width: 1170px;
   margin: 0 auto;
+}
+
+.App-body label,
+.App-body input {
+  margin-right: .7rem;
+}
+
+.App-body button {
+  border-radius: 25%;
+  border-color: lightgray;
+  background-color: transparent;
+}
+
+.App-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  border-top: .3rem solid #e1003c;
+  font-style: italic;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
