--- a/0x02-react_props/task_0/dashboard/src/Footer/Footer.css
+++ b/0x02-react_props/task_0/dashboard/src/Footer/Footer.css
@@ -1,11 +1,7 @@
+
 .App-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  border-top: .3rem solid #e1003c;
+  font-size: 1rem;
+  padding: 1.2rem;
+  text-align: center;
   font-style: italic;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
