--- a/0x02-react_props/task_0/dashboard/src/Header/Header.css
+++ b/0x02-react_props/task_0/dashboard/src/Header/Header.css
@@ -1,19 +1,13 @@
-.App-logo {
-  height: 35vmin;
-}
-
 .App-header {
-  position: relative;
-  width: 100%;
-  border-bottom: .3rem solid #e1003c;
-  align-items: center;
+  font-size: 1.4rem;
+  color: #e0354b;
   display: flex;
-  color: #e1003c;
-  margin-bottom: 3.5rem;
+  align-items: center;
+  border-bottom: 3px solid #e0354b;
+  padding-top: 200px;
 }
 
-.App-header h1 {
-  font-size: 2.5rem;
-  margin-bottom: 0;
-  font-weight: bold;
+.App-header img {
+  width: 200px;
+  height: 200px;
 }
