--- a/0x02-react_props/task_0/dashboard/src/Login/Login.css
+++ b/0x02-react_props/task_0/dashboard/src/Login/Login.css
@@ -1,10 +1,10 @@
-label,
-input {
-  margin-right: .7rem;
+.App-body {
+  font-size: 1rem;
+  padding: 2em;
+  border-bottom: 3px solid #e0354b;
+  height: 45%;
 }
 
-button {
-  border-radius: 25%;
-  border-color: lightgray;
-  background-color: transparent;
+form input {
+  margin: 10px;
 }
