--- a/0x02-react_props/task_0/dashboard/src/Notifications/Notifications.css
+++ b/0x02-react_props/task_0/dashboard/src/Notifications/Notifications.css
@@ -1,12 +1,15 @@
 .Notifications {
-    border: .1rem dashed #e1003c;
-    padding: .5rem;
+  padding: 1em;
+  border: 2px dashed red;
+  position: absolute;
+  top: 10px;
+  width: 95vw;
 }
 
-[data-priority="urgent"] {
-    color: red;
+li[data="default"] {
+  color: blue;
 }
 
-[data-priority="default"] {
-    color: blue;
+li[data="urgent"] {
+  color: red;
 }
